--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@astrojs/mdx": "^3.1.8",
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
+    "@tailwindcss/typography": "^0.5.15",
     "astro": "^4.16.6",
+    "exiftool-vendored": "^28.6.0",
+    "node-exiftool": "^2.3.0",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
