--- a/package.json
+++ b/package.json
@@ -14,14 +14,12 @@
     "@astrojs/mdx": "^3.1.8",
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
-    "@tailwindcss/typography": "^0.5.15",
-    "astro": "^4.16.6",
-    "exiftool-vendored": "^28.6.0",
+    "astro": "^4.16.7",
+    "exiftool-vendored": "^28.7.0",
     "node-exiftool": "^2.3.0",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
-    "@astrojs/tailwind": "^5.1.2",
-    "tailwindcss": "^3.4.14"
+    "@astrojs/tailwind": "^5.1.2"
   }
 }
