--- a/package.json
+++ b/package.json
@@ -4,10 +4,18 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
+    "dev": "astro build && pnpm run postbuild && astro dev",
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "copy:pagefind:dev": "cp -r dist/pagefind public/",
+    "build:astro": "astro build",
+    "build:pagefind": "npx pagefind --site dist/",
+    "build": "npm-run-all -s build:astro build:pagefind",
+    "cms-proxy": "netlify-cms-proxy-server",
+    "postbuild": "npx pagefind --site dist/",
+    "dev:cms": "npm-run-all -p dev cms-proxy"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
@@ -15,11 +23,14 @@
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
     "astro": "^4.16.7",
+    "decap-cms-app": "^3.3.3",
     "exiftool-vendored": "^28.7.0",
     "node-exiftool": "^2.3.0",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
-    "@astrojs/tailwind": "^5.1.2"
+    "@astrojs/tailwind": "^5.1.2",
+    "netlify-cms-proxy-server": "^1.3.24",
+    "npm-run-all": "^4.1.5"
   }
 }
