--- a/package.json
+++ b/package.json
@@ -3,16 +3,14 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
     "dev": "astro build && pnpm run postbuild && astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "npm-run-all -s build:astro build:pagefind",
     "preview": "astro preview",
     "astro": "astro",
     "copy:pagefind:dev": "cp -r dist/pagefind public/",
     "build:astro": "astro build",
     "build:pagefind": "npx pagefind --site dist/",
-    "build": "npm-run-all -s build:astro build:pagefind",
     "cms-proxy": "netlify-cms-proxy-server",
     "postbuild": "npx pagefind --site dist/",
     "dev:cms": "npm-run-all -p dev cms-proxy"
@@ -23,6 +21,7 @@
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
     "astro": "^4.16.7",
+    "astro-pagefind": "^1.6.0",
     "decap-cms-app": "^3.3.3",
     "exiftool-vendored": "^28.7.0",
     "node-exiftool": "^2.3.0",
@@ -31,6 +30,7 @@
   "devDependencies": {
     "@astrojs/tailwind": "^5.1.2",
     "netlify-cms-proxy-server": "^1.3.24",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "pagefind": "^1.1.1"
   }
 }
