--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build:pagefind": "npx pagefind --site dist/",
     "cms-proxy": "netlify-cms-proxy-server",
     "postbuild": "npx pagefind --site dist/",
-    "dev:cms": "npm-run-all -p dev cms-proxy"
+    "dev:cms": "npm-run-all -p dev cms-proxy",
+    "generate-heroes": "npx ts-node-esm scripts/generateHeroImages.mts"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
@@ -24,13 +25,19 @@
     "astro-pagefind": "^1.6.0",
     "decap-cms-app": "^3.3.3",
     "exiftool-vendored": "^28.7.0",
+    "glob": "^11.0.0",
+    "gray-matter": "^4.0.3",
     "node-exiftool": "^2.3.0",
-    "typescript": "^5.6.3"
+    "sharp": "^0.33.5",
+    "yaml": "^2.6.0"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^5.1.2",
+    "@types/node": "^22.7.9",
     "netlify-cms-proxy-server": "^1.3.24",
     "npm-run-all": "^4.1.5",
-    "pagefind": "^1.1.1"
+    "pagefind": "^1.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   }
 }
