--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,15 @@
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
     "strictNullChecks": true,
-    "typeRoots": ["./node_modules/@types", "./src/types"],
+    "typeRoots": ["./node_modules/@types", "./src/types", "node_modules/astro-pagefind/src/components"],
     "target": "ES2020",
     "module": "ESNext",
     "moduleResolution": "Bundler",
+    "exactOptionalPropertyTypes": false,
+    "baseUrl": ".",
+    "paths": {
+      "~/*": ["src/*"]
+    },
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
@@ -13,8 +18,9 @@
     "outDir": "./dist",
     "rootDir": ".",
     "allowJs": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
   },
-  "include": ["./**/*.ts", "./**/*.tsx", "./src/content/**/*.md","./src/content/**/*.mdx", "scripts/generateHeroImages.mts"],
+  "include": ["src/"],
+  // "include": ["./**/*.ts", "./**/*.tsx", "./src/content/**/*.md","./src/content/**/*.mdx", "scripts/generateHeroImages.mts"],
   "exclude": ["node_modules"]
 }
