--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "glob": "^11.0.0",
     "gray-matter": "^4.0.3",
     "node-exiftool": "^2.3.0",
+    "rehype-external-links": "^3.0.0",
     "sharp": "^0.33.5",
     "yaml": "^2.6.0"
   },
