--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
   },
   "devDependencies": {
     "@astrojs/tailwind": "^5.1.2",
+    "@iconify-json/mdi": "^1.2.1",
     "@types/node": "^22.9.0",
+    "astro-icon": "^1.1.4",
     "netlify-cms-proxy-server": "^1.3.24",
     "npm-run-all": "^4.1.5",
     "pagefind": "^1.2.0",
